- Updates carousel selector for modified markup. - Fixes minor spacing issues for the carousel.

--- a/assets/src/web-stories-block/css/lightbox.css
+++ b/assets/src/web-stories-block/css/lightbox.css
@@ -9,7 +9,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  visibility: collapse;
   opacity: 0;
   transition: opacity 0.2s linear;
 }
